--- a/gk.bib
+++ b/gk.bib
@@ -29755,486 +29755,495 @@
   publisher = {Sage Publications}
 }
 @article{raichle2015brain,
-  title={The brain's default mode network},
-  author={Raichle, Marcus E},
-  journal={Annual review of neuroscience},
-  volume={38},
-  pages={433--447},
-  year={2015},
-  publisher={Annual Reviews}
+  title     = {The brain's default mode network},
+  author    = {Raichle, Marcus E},
+  journal   = {Annual review of neuroscience},
+  volume    = {38},
+  pages     = {433--447},
+  year      = {2015},
+  publisher = {Annual Reviews}
 }
 @article{weissman2006neural,
-  title={The neural bases of momentary lapses in attention},
-  author={Weissman, Daniel H and Roberts, KC and Visscher, KM and Woldorff, MG},
-  journal={Nature neuroscience},
-  volume={9},
-  number={7},
-  pages={971--978},
-  year={2006},
-  publisher={Nature Publishing Group US New York}
+  title     = {The neural bases of momentary lapses in attention},
+  author    = {Weissman, Daniel H and Roberts, KC and Visscher, KM and Woldorff, MG},
+  journal   = {Nature neuroscience},
+  volume    = {9},
+  number    = {7},
+  pages     = {971--978},
+  year      = {2006},
+  publisher = {Nature Publishing Group US New York}
 }
 @article{kane2017whom,
-  title={For whom the mind wanders, and when, varies across laboratory and daily-life settings},
-  author={Kane, Michael J and Gross, Georgina M and Chun, Charlotte A and Smeekens, Bridget A and Meier, Matt E and Silvia, Paul J and Kwapil, Thomas R},
-  journal={Psychological science},
-  volume={28},
-  number={9},
-  pages={1271--1289},
-  year={2017},
-  publisher={Sage Publications Sage CA: Los Angeles, CA}
+  title     = {For whom the mind wanders, and when, varies across laboratory and daily-life settings},
+  author    = {Kane, Michael J and Gross, Georgina M and Chun, Charlotte A and Smeekens, Bridget A and Meier, Matt E and Silvia, Paul J and Kwapil, Thomas R},
+  journal   = {Psychological science},
+  volume    = {28},
+  number    = {9},
+  pages     = {1271--1289},
+  year      = {2017},
+  publisher = {Sage Publications Sage CA: Los Angeles, CA}
 }
 @article{baird2011back,
-  title={Back to the future: Autobiographical planning and the functionality of mind-wandering},
-  author={Baird, Benjamin and Smallwood, Jonathan and Schooler, Jonathan W},
-  journal={Consciousness and cognition},
-  volume={20},
-  number={4},
-  pages={1604--1611},
-  year={2011},
-  publisher={Elsevier}
+  title     = {Back to the future: Autobiographical planning and the functionality of mind-wandering},
+  author    = {Baird, Benjamin and Smallwood, Jonathan and Schooler, Jonathan W},
+  journal   = {Consciousness and cognition},
+  volume    = {20},
+  number    = {4},
+  pages     = {1604--1611},
+  year      = {2011},
+  publisher = {Elsevier}
 }
 @article{larson2009cortical,
-  title={Cortical network functional connectivity in the descent to sleep},
-  author={Larson-Prior, Linda J and Zempel, John M and Nolan, Tracy S and Prior, Fred W and Snyder, Abraham Z and Raichle, Marcus E},
-  journal={Proceedings of the National Academy of Sciences},
-  volume={106},
-  number={11},
-  pages={4489--4494},
-  year={2009},
-  publisher={National Acad Sciences}
+  title     = {Cortical network functional connectivity in the descent to sleep},
+  author    = {Larson-Prior, Linda J and Zempel, John M and Nolan, Tracy S and Prior, Fred W and Snyder, Abraham Z and Raichle, Marcus E},
+  journal   = {Proceedings of the National Academy of Sciences},
+  volume    = {106},
+  number    = {11},
+  pages     = {4489--4494},
+  year      = {2009},
+  publisher = {National Acad Sciences}
 }
 @article{horovitz2008low,
-  title={Low frequency BOLD fluctuations during resting wakefulness and light sleep: A simultaneous EEG-fMRI study},
-  author={Horovitz, Silvina G and Fukunaga, Masaki and de Zwart, Jacco A and van Gelderen, Peter and Fulton, Susan C and Balkin, Thomas J and Duyn, Jeff H},
-  journal={Human brain mapping},
-  volume={29},
-  number={6},
-  pages={671--682},
-  year={2008},
-  publisher={Wiley Online Library}
+  title     = {Low frequency BOLD fluctuations during resting wakefulness and light sleep: A simultaneous EEG-fMRI study},
+  author    = {Horovitz, Silvina G and Fukunaga, Masaki and de Zwart, Jacco A and van Gelderen, Peter and Fulton, Susan C and Balkin, Thomas J and Duyn, Jeff H},
+  journal   = {Human brain mapping},
+  volume    = {29},
+  number    = {6},
+  pages     = {671--682},
+  year      = {2008},
+  publisher = {Wiley Online Library}
 }
 @article{shulman1997common,
-  title={Common blood flow changes across visual tasks: I. Increases in subcortical structures and cerebellum but not in nonvisual cortex},
-  author={Shulman, Gordon L and Corbetta, Maurizio and Buckner, Randy L and Fiez, Julie A and Miezin, Francis M and Raichle, Marcus E and Petersen, Steven E},
-  journal={Journal of cognitive neuroscience},
-  volume={9},
-  number={5},
-  pages={624--647},
-  year={1997},
-  publisher={MIT Press One Rogers Street, Cambridge, MA 02142-1209, USA journals-info~…}
+  title     = {Common blood flow changes across visual tasks: I. Increases in subcortical structures and cerebellum but not in nonvisual cortex},
+  author    = {Shulman, Gordon L and Corbetta, Maurizio and Buckner, Randy L and Fiez, Julie A and Miezin, Francis M and Raichle, Marcus E and Petersen, Steven E},
+  journal   = {Journal of cognitive neuroscience},
+  volume    = {9},
+  number    = {5},
+  pages     = {624--647},
+  year      = {1997},
+  publisher = {MIT Press One Rogers Street, Cambridge, MA 02142-1209, USA journals-info~…}
 }
 @article{raichle2001default,
-  title={A default mode of brain function},
-  author={Raichle, Marcus E and MacLeod, Ann Mary and Snyder, Abraham Z and Powers, William J and Gusnard, Debra A and Shulman, Gordon L},
-  journal={Proceedings of the national academy of sciences},
-  volume={98},
-  number={2},
-  pages={676--682},
-  year={2001},
-  publisher={National Acad Sciences}
+  title     = {A default mode of brain function},
+  author    = {Raichle, Marcus E and MacLeod, Ann Mary and Snyder, Abraham Z and Powers, William J and Gusnard, Debra A and Shulman, Gordon L},
+  journal   = {Proceedings of the national academy of sciences},
+  volume    = {98},
+  number    = {2},
+  pages     = {676--682},
+  year      = {2001},
+  publisher = {National Acad Sciences}
 }
 @article{andrews2010evidence,
-  title={Evidence for the default network's role in spontaneous cognition},
-  author={Andrews-Hanna, Jessica R and Reidler, Jay S and Huang, Christine and Buckner, Randy L},
-  journal={Journal of neurophysiology},
-  volume={104},
-  number={1},
-  pages={322--335},
-  year={2010},
-  publisher={American Physiological Society Bethesda, MD}
+  title     = {Evidence for the default network's role in spontaneous cognition},
+  author    = {Andrews-Hanna, Jessica R and Reidler, Jay S and Huang, Christine and Buckner, Randy L},
+  journal   = {Journal of neurophysiology},
+  volume    = {104},
+  number    = {1},
+  pages     = {322--335},
+  year      = {2010},
+  publisher = {American Physiological Society Bethesda, MD}
 }
 @article{christoff2016mind,
-  title={Mind-wandering as spontaneous thought: a dynamic framework},
-  author={Christoff, Kalina and Irving, Zachary C and Fox, Kieran CR and Spreng, R Nathan and Andrews-Hanna, Jessica R},
-  journal={Nature reviews neuroscience},
-  volume={17},
-  number={11},
-  pages={718--731},
-  year={2016},
-  publisher={Nature Publishing Group UK London}
+  title     = {Mind-wandering as spontaneous thought: a dynamic framework},
+  author    = {Christoff, Kalina and Irving, Zachary C and Fox, Kieran CR and Spreng, R Nathan and Andrews-Hanna, Jessica R},
+  journal   = {Nature reviews neuroscience},
+  volume    = {17},
+  number    = {11},
+  pages     = {718--731},
+  year      = {2016},
+  publisher = {Nature Publishing Group UK London}
 }
 @article{danckert2018boredom,
-  title={Boredom, sustained attention and the default mode network},
-  author={Danckert, James and Merrifield, Colleen},
-  journal={Experimental brain research},
-  volume={236},
-  pages={2507--2518},
-  year={2018},
-  publisher={Springer}
+  title     = {Boredom, sustained attention and the default mode network},
+  author    = {Danckert, James and Merrifield, Colleen},
+  journal   = {Experimental brain research},
+  volume    = {236},
+  pages     = {2507--2518},
+  year      = {2018},
+  publisher = {Springer}
 }
 @article{walker2018mind,
-  title={Mind-wandering while driving: The impact of fatigue, task length, and sustained attention abilities},
-  author={Walker, Heather EK and Trick, Lana M},
-  journal={Transportation research part F: traffic psychology and behaviour},
-  volume={59},
-  pages={81--97},
-  year={2018},
-  publisher={Elsevier}
+  title     = {Mind-wandering while driving: The impact of fatigue, task length, and sustained attention abilities},
+  author    = {Walker, Heather EK and Trick, Lana M},
+  journal   = {Transportation research part F: traffic psychology and behaviour},
+  volume    = {59},
+  pages     = {81--97},
+  year      = {2018},
+  publisher = {Elsevier}
 }
 @article{wong2023reconceptualizing,
-  title={Reconceptualizing mind wandering from a switching perspective},
-  author={Wong, Yi-Sheng and Willoughby, Adrian R and Machado, Liana},
-  journal={Psychological research},
-  volume={87},
-  number={2},
-  pages={357--372},
-  year={2023},
-  publisher={Springer}
+  title     = {Reconceptualizing mind wandering from a switching perspective},
+  author    = {Wong, Yi-Sheng and Willoughby, Adrian R and Machado, Liana},
+  journal   = {Psychological research},
+  volume    = {87},
+  number    = {2},
+  pages     = {357--372},
+  year      = {2023},
+  publisher = {Springer}
 }
 @article{smallwood2013distinguishing,
-  title={Distinguishing how from why the mind wanders: a process--occurrence framework for self-generated mental activity.},
-  author={Smallwood, Jonathan},
-  journal={Psychological bulletin},
-  volume={139},
-  number={3},
-  pages={519},
-  year={2013},
-  publisher={American Psychological Association}
+  title     = {Distinguishing how from why the mind wanders: a process--occurrence framework for self-generated mental activity.},
+  author    = {Smallwood, Jonathan},
+  journal   = {Psychological bulletin},
+  volume    = {139},
+  number    = {3},
+  pages     = {519},
+  year      = {2013},
+  publisher = {American Psychological Association}
 }
 @article{christoff2009experience,
-  title={Experience sampling during fMRI reveals default network and executive system contributions to mind wandering},
-  author={Christoff, Kalina and Gordon, Alan M and Smallwood, Jonathan and Smith, Rachelle and Schooler, Jonathan W},
-  journal={Proceedings of the National Academy of Sciences},
-  volume={106},
-  number={21},
-  pages={8719--8724},
-  year={2009},
-  publisher={National Acad Sciences}
+  title     = {Experience sampling during fMRI reveals default network and executive system contributions to mind wandering},
+  author    = {Christoff, Kalina and Gordon, Alan M and Smallwood, Jonathan and Smith, Rachelle and Schooler, Jonathan W},
+  journal   = {Proceedings of the National Academy of Sciences},
+  volume    = {106},
+  number    = {21},
+  pages     = {8719--8724},
+  year      = {2009},
+  publisher = {National Acad Sciences}
 }
 @article{kucyi2013mind,
-  title={Mind wandering away from pain dynamically engages antinociceptive and default mode brain networks},
-  author={Kucyi, Aaron and Salomons, Tim V and Davis, Karen D},
-  journal={Proceedings of the National Academy of Sciences},
-  volume={110},
-  number={46},
-  pages={18692--18697},
-  year={2013},
-  publisher={National Acad Sciences}
+  title     = {Mind wandering away from pain dynamically engages antinociceptive and default mode brain networks},
+  author    = {Kucyi, Aaron and Salomons, Tim V and Davis, Karen D},
+  journal   = {Proceedings of the National Academy of Sciences},
+  volume    = {110},
+  number    = {46},
+  pages     = {18692--18697},
+  year      = {2013},
+  publisher = {National Acad Sciences}
 }
 @article{stawarczyk2011neural,
-  title={Neural correlates of ongoing conscious experience: both task-unrelatedness and stimulus-independence are related to default network activity},
-  author={Stawarczyk, David and Majerus, Steve and Maquet, Pierre and D'Argembeau, Arnaud},
-  journal={PloS one},
-  volume={6},
-  number={2},
-  pages={e16997},
-  year={2011},
-  publisher={Public Library of Science San Francisco, USA}
+  title     = {Neural correlates of ongoing conscious experience: both task-unrelatedness and stimulus-independence are related to default network activity},
+  author    = {Stawarczyk, David and Majerus, Steve and Maquet, Pierre and D'Argembeau, Arnaud},
+  journal   = {PloS one},
+  volume    = {6},
+  number    = {2},
+  pages     = {e16997},
+  year      = {2011},
+  publisher = {Public Library of Science San Francisco, USA}
 }
 @article{seli2016mind,
-  title={Mind-wandering with and without intention},
-  author={Seli, Paul and Risko, Evan F and Smilek, Daniel and Schacter, Daniel L},
-  journal={Trends in cognitive sciences},
-  volume={20},
-  number={8},
-  pages={605--617},
-  year={2016},
-  publisher={Elsevier}
+  title     = {Mind-wandering with and without intention},
+  author    = {Seli, Paul and Risko, Evan F and Smilek, Daniel and Schacter, Daniel L},
+  journal   = {Trends in cognitive sciences},
+  volume    = {20},
+  number    = {8},
+  pages     = {605--617},
+  year      = {2016},
+  publisher = {Elsevier}
 }
 @article{ciaramelli2019mind,
-  title={A mind free to wander: neural and computational constraints on spontaneous thought},
-  author={Ciaramelli, Elisa and Treves, Alessandro},
-  journal={Frontiers in psychology},
-  volume={10},
-  pages={39},
-  year={2019},
-  publisher={Frontiers Media SA}
+  title     = {A mind free to wander: neural and computational constraints on spontaneous thought},
+  author    = {Ciaramelli, Elisa and Treves, Alessandro},
+  journal   = {Frontiers in psychology},
+  volume    = {10},
+  pages     = {39},
+  year      = {2019},
+  publisher = {Frontiers Media SA}
 }
 @article{alvarez2019paying,
-  title={Paying attention to inattentive survey respondents},
-  author={Alvarez, R Michael and Atkeson, Lonna Rae and Levin, Ines and Li, Yimeng},
-  journal={Political Analysis},
-  volume={27},
-  number={2},
-  pages={145--162},
-  year={2019},
-  publisher={Cambridge University Press}
+  title     = {Paying attention to inattentive survey respondents},
+  author    = {Alvarez, R Michael and Atkeson, Lonna Rae and Levin, Ines and Li, Yimeng},
+  journal   = {Political Analysis},
+  volume    = {27},
+  number    = {2},
+  pages     = {145--162},
+  year      = {2019},
+  publisher = {Cambridge University Press}
 }
 @article{meade2012identifying,
-  title={Identifying careless responses in survey data.},
-  author={Meade, Adam W and Craig, S Bartholomew},
-  journal={Psychological methods},
-  volume={17},
-  number={3},
-  pages={437},
-  year={2012},
-  publisher={American Psychological Association}
+  title     = {Identifying careless responses in survey data.},
+  author    = {Meade, Adam W and Craig, S Bartholomew},
+  journal   = {Psychological methods},
+  volume    = {17},
+  number    = {3},
+  pages     = {437},
+  year      = {2012},
+  publisher = {American Psychological Association}
 }
 @article{huang2012detecting,
-  title={Detecting and deterring insufficient effort responding to surveys},
-  author={Huang, Jason L and Curran, Paul G and Keeney, Jessica and Poposki, Elizabeth M and DeShon, Richard P},
-  journal={Journal of Business and Psychology},
-  volume={27},
-  pages={99--114},
-  year={2012},
-  publisher={Springer}
+  title     = {Detecting and deterring insufficient effort responding to surveys},
+  author    = {Huang, Jason L and Curran, Paul G and Keeney, Jessica and Poposki, Elizabeth M and DeShon, Richard P},
+  journal   = {Journal of Business and Psychology},
+  volume    = {27},
+  pages     = {99--114},
+  year      = {2012},
+  publisher = {Springer}
 }
 @article{hasenkamp2012mind,
-  title={Mind wandering and attention during focused meditation: a fine-grained temporal analysis of fluctuating cognitive states},
-  author={Hasenkamp, Wendy and Wilson-Mendenhall, Christine D and Duncan, Erica and Barsalou, Lawrence W},
-  journal={Neuroimage},
-  volume={59},
-  number={1},
-  pages={750--760},
-  year={2012},
-  publisher={Elsevier}
+  title     = {Mind wandering and attention during focused meditation: a fine-grained temporal analysis of fluctuating cognitive states},
+  author    = {Hasenkamp, Wendy and Wilson-Mendenhall, Christine D and Duncan, Erica and Barsalou, Lawrence W},
+  journal   = {Neuroimage},
+  volume    = {59},
+  number    = {1},
+  pages     = {750--760},
+  year      = {2012},
+  publisher = {Elsevier}
 }
 @article{grandchamp2014oculometric,
-  title={Oculometric variations during mind wandering},
-  author={Grandchamp, Romain and Braboszcz, Claire and Delorme, Arnaud},
-  journal={Frontiers in psychology},
-  volume={5},
-  pages={31},
-  year={2014},
-  publisher={Frontiers Media SA}
+  title     = {Oculometric variations during mind wandering},
+  author    = {Grandchamp, Romain and Braboszcz, Claire and Delorme, Arnaud},
+  journal   = {Frontiers in psychology},
+  volume    = {5},
+  pages     = {31},
+  year      = {2014},
+  publisher = {Frontiers Media SA}
 }
 @article{sender2021distribution,
-  title={The distribution of cellular turnover in the human body},
-  author={Sender, Ron and Milo, Ron},
-  journal={Nature medicine},
-  volume={27},
-  number={1},
-  pages={45--48},
-  year={2021},
-  publisher={Nature Publishing Group US New York}
+  title     = {The distribution of cellular turnover in the human body},
+  author    = {Sender, Ron and Milo, Ron},
+  journal   = {Nature medicine},
+  volume    = {27},
+  number    = {1},
+  pages     = {45--48},
+  year      = {2021},
+  publisher = {Nature Publishing Group US New York}
 }
 @article{liang2021human,
-  title={The human virome: assembly, composition and host interactions},
-  author={Liang, Guanxiang and Bushman, Frederic D},
-  journal={Nature Reviews Microbiology},
-  volume={19},
-  number={8},
-  pages={514--527},
-  year={2021},
-  publisher={Nature Publishing Group UK London}
+  title     = {The human virome: assembly, composition and host interactions},
+  author    = {Liang, Guanxiang and Bushman, Frederic D},
+  journal   = {Nature Reviews Microbiology},
+  volume    = {19},
+  number    = {8},
+  pages     = {514--527},
+  year      = {2021},
+  publisher = {Nature Publishing Group UK London}
 }
 @article{sender2016revised,
-  title={Revised estimates for the number of human and bacteria cells in the body},
-  author={Sender, Ron and Fuchs, Shai and Milo, Ron},
-  journal={PLoS biology},
-  volume={14},
-  number={8},
-  pages={e1002533},
-  year={2016},
-  publisher={Public Library of Science San Francisco, CA USA}
+  title     = {Revised estimates for the number of human and bacteria cells in the body},
+  author    = {Sender, Ron and Fuchs, Shai and Milo, Ron},
+  journal   = {PLoS biology},
+  volume    = {14},
+  number    = {8},
+  pages     = {e1002533},
+  year      = {2016},
+  publisher = {Public Library of Science San Francisco, CA USA}
 }
 @article{pinsoneault2007detecting,
-  title={Detecting random, partially random, and nonrandom Minnesota Multiphasic Personality Inventory-2 protocols.},
-  author={Pinsoneault, Terry B},
-  journal={Psychological assessment},
-  volume={19},
-  number={1},
-  pages={159},
-  year={2007},
-  publisher={American Psychological Association}
+  title     = {Detecting random, partially random, and nonrandom Minnesota Multiphasic Personality Inventory-2 protocols.},
+  author    = {Pinsoneault, Terry B},
+  journal   = {Psychological assessment},
+  volume    = {19},
+  number    = {1},
+  pages     = {159},
+  year      = {2007},
+  publisher = {American Psychological Association}
 }
 @article{mcgrath2010evidence,
-  title={Evidence for response bias as a source of error variance in applied assessment.},
-  author={McGrath, Robert E and Mitchell, Matthew and Kim, Brian H and Hough, Leaetta},
-  journal={Psychological bulletin},
-  volume={136},
-  number={3},
-  pages={450},
-  year={2010},
-  publisher={American Psychological Association}
+  title     = {Evidence for response bias as a source of error variance in applied assessment.},
+  author    = {McGrath, Robert E and Mitchell, Matthew and Kim, Brian H and Hough, Leaetta},
+  journal   = {Psychological bulletin},
+  volume    = {136},
+  number    = {3},
+  pages     = {450},
+  year      = {2010},
+  publisher = {American Psychological Association}
 }
 @article{arias2023detecting,
-  title={Detecting non-content-based response styles in survey data: An application of mixture factor analysis},
-  author={Arias, Victor B and Ponce, Fernando P and Garrido, Luis E and Nieto-Canaveras, Maria Dolores and Martinez-Molina, Agustin and Arias, Benito},
-  journal={Behavior Research Methods},
-  pages={1--17},
-  year={2023},
-  publisher={Springer}
+  title     = {Detecting non-content-based response styles in survey data: An application of mixture factor analysis},
+  author    = {Arias, Victor B and Ponce, Fernando P and Garrido, Luis E and Nieto-Canaveras, Maria Dolores and Martinez-Molina, Agustin and Arias, Benito},
+  journal   = {Behavior Research Methods},
+  pages     = {1--17},
+  year      = {2023},
+  publisher = {Springer}
 }
 @article{lee2009search,
-  title={In search of homo economicus: Cognitive noise and the role of emotion in preference consistency},
-  author={Lee, Leonard and Amir, On and Ariely, Dan},
-  journal={Journal of consumer research},
-  volume={36},
-  number={2},
-  pages={173--187},
-  year={2009},
-  publisher={The University of Chicago Press}
+  title     = {In search of homo economicus: Cognitive noise and the role of emotion in preference consistency},
+  author    = {Lee, Leonard and Amir, On and Ariely, Dan},
+  journal   = {Journal of consumer research},
+  volume    = {36},
+  number    = {2},
+  pages     = {173--187},
+  year      = {2009},
+  publisher = {The University of Chicago Press}
 }
 @article{rentfrow2011structure,
-  title={The structure of musical preferences: a five-factor model.},
-  author={Rentfrow, Peter J and Goldberg, Lewis R and Levitin, Daniel J},
-  journal={Journal of personality and social psychology},
-  volume={100},
-  number={6},
-  pages={1139},
-  year={2011},
-  publisher={American Psychological Association}
+  title     = {The structure of musical preferences: a five-factor model.},
+  author    = {Rentfrow, Peter J and Goldberg, Lewis R and Levitin, Daniel J},
+  journal   = {Journal of personality and social psychology},
+  volume    = {100},
+  number    = {6},
+  pages     = {1139},
+  year      = {2011},
+  publisher = {American Psychological Association}
 }
 @article{lee2015money,
-  title={Money, time, and the stability of consumer preferences},
-  author={Lee, Leonard and Lee, Michelle P and Bertini, Marco and Zauberman, Gal and Ariely, Dan},
-  journal={Journal of Marketing Research},
-  volume={52},
-  number={2},
-  pages={184--199},
-  year={2015},
-  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+  title     = {Money, time, and the stability of consumer preferences},
+  author    = {Lee, Leonard and Lee, Michelle P and Bertini, Marco and Zauberman, Gal and Ariely, Dan},
+  journal   = {Journal of Marketing Research},
+  volume    = {52},
+  number    = {2},
+  pages     = {184--199},
+  year      = {2015},
+  publisher = {SAGE Publications Sage CA: Los Angeles, CA}
 }
 @article{sani2021human,
-  title={The human endogenous attentional control network includes a ventro-temporal cortical node},
-  author={Sani, Ilaria and Stemmann, Heiko and Caron, Bradley and Bullock, Daniel and Stemmler, Torsten and Fahle, Manfred and Pestilli, Franco and Freiwald, Winrich A},
-  journal={Nature communications},
-  volume={12},
-  number={1},
-  pages={360},
-  year={2021},
-  publisher={Nature Publishing Group UK London}
+  title     = {The human endogenous attentional control network includes a ventro-temporal cortical node},
+  author    = {Sani, Ilaria and Stemmann, Heiko and Caron, Bradley and Bullock, Daniel and Stemmler, Torsten and Fahle, Manfred and Pestilli, Franco and Freiwald, Winrich A},
+  journal   = {Nature communications},
+  volume    = {12},
+  number    = {1},
+  pages     = {360},
+  year      = {2021},
+  publisher = {Nature Publishing Group UK London}
 }
 @article{buckner2019brain,
-  title={The brain’s default network: updated anatomy, physiology and evolving insights},
-  author={Buckner, Randy L and DiNicola, Lauren M},
-  journal={Nature Reviews Neuroscience},
-  volume={20},
-  number={10},
-  pages={593--608},
-  year={2019},
-  publisher={Nature Publishing Group UK London}
+  title     = {The brain’s default network: updated anatomy, physiology and evolving insights},
+  author    = {Buckner, Randy L and DiNicola, Lauren M},
+  journal   = {Nature Reviews Neuroscience},
+  volume    = {20},
+  number    = {10},
+  pages     = {593--608},
+  year      = {2019},
+  publisher = {Nature Publishing Group UK London}
 }
 @article{andrews2014default,
-  title={The default network and self-generated thought: Component processes, dynamic control, and clinical relevance},
-  author={Andrews-Hanna, Jessica R and Smallwood, Jonathan and Spreng, R Nathan},
-  journal={Annals of the new York Academy of Sciences},
-  volume={1316},
-  number={1},
-  pages={29--52},
-  year={2014},
-  publisher={Wiley Online Library}
+  title     = {The default network and self-generated thought: Component processes, dynamic control, and clinical relevance},
+  author    = {Andrews-Hanna, Jessica R and Smallwood, Jonathan and Spreng, R Nathan},
+  journal   = {Annals of the new York Academy of Sciences},
+  volume    = {1316},
+  number    = {1},
+  pages     = {29--52},
+  year      = {2014},
+  publisher = {Wiley Online Library}
 }
 @article{smallwood2015science,
-  title={The science of mind wandering: Empirically navigating the stream of consciousness},
-  author={Smallwood, Jonathan and Schooler, Jonathan W},
-  journal={Annual review of psychology},
-  volume={66},
-  pages={487--518},
-  year={2015},
-  publisher={Annual Reviews}
+  title     = {The science of mind wandering: Empirically navigating the stream of consciousness},
+  author    = {Smallwood, Jonathan and Schooler, Jonathan W},
+  journal   = {Annual review of psychology},
+  volume    = {66},
+  pages     = {487--518},
+  year      = {2015},
+  publisher = {Annual Reviews}
 }
 @book{LazBerMcP48,
-  author         = {Lazarsfeld, Paul F. and Berelson, Bernard R., and McPhee, William N.},
-  publisher      = {Inter-university Consortium for Political and Social Research [distributor]},
-  title          = {Elmira Community Study},
-  doi            = {10.3886/ICPSR07200.v1}, 
-  year           = {1948 (2006)}
+  author    = {Lazarsfeld, Paul F. and Berelson, Bernard R., and McPhee, William N.},
+  publisher = {Inter-university Consortium for Political and Social Research [distributor]},
+  title     = {Elmira Community Study},
+  doi       = {10.3886/ICPSR07200.v1},
+  year      = {1948 (2006)}
 }
 @article{kahneman1991anomalies,
-  title={Anomalies: The endowment effect, loss aversion, and status quo bias},
-  author={Kahneman, Daniel and Knetsch, Jack L and Thaler, Richard H},
-  journal={Journal of Economic perspectives},
-  volume={5},
-  number={1},
-  pages={193--206},
-  year={1991},
-  publisher={American Economic Association}
+  title     = {Anomalies: The endowment effect, loss aversion, and status quo bias},
+  author    = {Kahneman, Daniel and Knetsch, Jack L and Thaler, Richard H},
+  journal   = {Journal of Economic perspectives},
+  volume    = {5},
+  number    = {1},
+  pages     = {193--206},
+  year      = {1991},
+  publisher = {American Economic Association}
 }
 @article{godefroid2023measure,
-  title={How to measure the status quo bias? A review of current literature},
-  author={Godefroid, Marie-E and Plattfaut, Ralf and Niehaves, Bj{\"o}rn},
-  journal={Management Review Quarterly},
-  volume={73},
-  number={4},
-  pages={1667--1711},
-  year={2023},
-  publisher={Springer}
+  title     = {How to measure the status quo bias? A review of current literature},
+  author    = {Godefroid, Marie-E and Plattfaut, Ralf and Niehaves, Bj{\"o}rn},
+  journal   = {Management Review Quarterly},
+  volume    = {73},
+  number    = {4},
+  pages     = {1667--1711},
+  year      = {2023},
+  publisher = {Springer}
 }
 @article{samuelson1988status,
-  title={Status quo bias in decision making},
-  author={Samuelson, William and Zeckhauser, Richard},
-  journal={Journal of risk and uncertainty},
-  volume={1},
-  pages={7--59},
-  year={1988},
-  publisher={Springer}
+  title     = {Status quo bias in decision making},
+  author    = {Samuelson, William and Zeckhauser, Richard},
+  journal   = {Journal of risk and uncertainty},
+  volume    = {1},
+  pages     = {7--59},
+  year      = {1988},
+  publisher = {Springer}
 }
 @incollection{mercier2022confirmation,
-  title={Confirmation bias--myside bias},
-  author={Mercier, Hugo},
-  booktitle={Cognitive illusions},
-  pages={78--91},
-  year={2022},
-  publisher={Routledge}
+  title     = {Confirmation bias--myside bias},
+  author    = {Mercier, Hugo},
+  booktitle = {Cognitive illusions},
+  pages     = {78--91},
+  year      = {2022},
+  publisher = {Routledge}
 }
 @article{mcfadden2001economic,
-  title={Economic choices},
-  author={McFadden, Daniel},
-  journal={American economic review},
-  volume={91},
-  number={3},
-  pages={351--378},
-  year={2001},
-  publisher={American Economic Association}
+  title     = {Economic choices},
+  author    = {McFadden, Daniel},
+  journal   = {American economic review},
+  volume    = {91},
+  number    = {3},
+  pages     = {351--378},
+  year      = {2001},
+  publisher = {American Economic Association}
 }
 @article{graham2023measuring,
-  title={Measuring misperceptions?},
-  author={Graham, Matthew H},
-  journal={American Political Science Review},
-  volume={117},
-  number={1},
-  pages={80--102},
-  year={2023},
-  publisher={Cambridge University Press}
+  title     = {Measuring misperceptions?},
+  author    = {Graham, Matthew H},
+  journal   = {American Political Science Review},
+  volume    = {117},
+  number    = {1},
+  pages     = {80--102},
+  year      = {2023},
+  publisher = {Cambridge University Press}
 }
 @article{stettler2009representations,
-  title={Representations of odor in the piriform cortex},
-  author={Stettler, Dan D and Axel, Richard},
-  journal={Neuron},
-  volume={63},
-  number={6},
-  pages={854--864},
-  year={2009},
-  publisher={Elsevier}
+  title     = {Representations of odor in the piriform cortex},
+  author    = {Stettler, Dan D and Axel, Richard},
+  journal   = {Neuron},
+  volume    = {63},
+  number    = {6},
+  pages     = {854--864},
+  year      = {2009},
+  publisher = {Elsevier}
 }
 @article{sosulski2011distinct,
-  title={Distinct representations of olfactory information in different cortical centres},
-  author={Sosulski, Dara L and Bloom, Maria Lissitsyna and Cutforth, Tyler and Axel, Richard and Datta, Sandeep Robert},
-  journal={Nature},
-  volume={472},
-  number={7342},
-  pages={213--216},
-  year={2011},
-  publisher={Nature Publishing Group UK London}
+  title     = {Distinct representations of olfactory information in different cortical centres},
+  author    = {Sosulski, Dara L and Bloom, Maria Lissitsyna and Cutforth, Tyler and Axel, Richard and Datta, Sandeep Robert},
+  journal   = {Nature},
+  volume    = {472},
+  number    = {7342},
+  pages     = {213--216},
+  year      = {2011},
+  publisher = {Nature Publishing Group UK London}
 }
 @article{luo2010generating,
-  title={Generating sparse and selective third-order responses in the olfactory system of the fly},
-  author={Luo, Sean X and Axel, Richard and Abbott, LF},
-  journal={Proceedings of the National Academy of Sciences},
-  volume={107},
-  number={23},
-  pages={10713--10718},
-  year={2010},
-  publisher={National Acad Sciences}
+  title     = {Generating sparse and selective third-order responses in the olfactory system of the fly},
+  author    = {Luo, Sean X and Axel, Richard and Abbott, LF},
+  journal   = {Proceedings of the National Academy of Sciences},
+  volume    = {107},
+  number    = {23},
+  pages     = {10713--10718},
+  year      = {2010},
+  publisher = {National Acad Sciences}
 }
 @article{caron2013random,
-  title={Random convergence of olfactory inputs in the Drosophila mushroom body},
-  author={Caron, Sophie JC and Ruta, Vanessa and Abbott, Larry F and Axel, Richard},
-  journal={Nature},
-  volume={497},
-  number={7447},
-  pages={113--117},
-  year={2013},
-  publisher={Nature Publishing Group UK London}
+  title     = {Random convergence of olfactory inputs in the Drosophila mushroom body},
+  author    = {Caron, Sophie JC and Ruta, Vanessa and Abbott, Larry F and Axel, Richard},
+  journal   = {Nature},
+  volume    = {497},
+  number    = {7447},
+  pages     = {113--117},
+  year      = {2013},
+  publisher = {Nature Publishing Group UK London}
 }
 @article{heams2014randomness,
-  title={Randomness in biology},
-  author={Heams, Thomas},
-  journal={Mathematical Structures in Computer Science},
-  volume={24},
-  number={3},
-  pages={e240308},
-  year={2014},
-  publisher={Cambridge University Press}
+  title     = {Randomness in biology},
+  author    = {Heams, Thomas},
+  journal   = {Mathematical Structures in Computer Science},
+  volume    = {24},
+  number    = {3},
+  pages     = {e240308},
+  year      = {2014},
+  publisher = {Cambridge University Press}
 }
 @article{ilan2020order,
-  title={Order through disorder: the characteristic variability of systems},
-  author={Ilan, Yaron},
-  journal={Frontiers in Cell and Developmental Biology},
-  volume={8},
-  pages={495391},
-  year={2020},
-  publisher={Frontiers}
+  title     = {Order through disorder: the characteristic variability of systems},
+  author    = {Ilan, Yaron},
+  journal   = {Frontiers in Cell and Developmental Biology},
+  volume    = {8},
+  pages     = {495391},
+  year      = {2020},
+  publisher = {Frontiers}
+}
+@article{key,
+  author  = {Barack, DL and Ludwig, VU and Parodi, F and Ahmed, N and Brannon, EM and Ramakrishnan, A and Platt, ML},
+  journal = {Proc.  R.  Soc. B},
+  number  = {B291},
+  title   = {Attention deficits linked with proclivity to explore while foraging},
+  volume  = {291},
+  doi = {doi.org/10.1098/rspb.2022.2584},
+  year    = {2024}
 }
