--- a/gk.bib
+++ b/gk.bib
@@ -30238,12 +30238,12 @@
   year      = {2020},
   publisher = {Frontiers}
 }
-@article{key,
+@article{BarLudPar2024,
   author  = {Barack, DL and Ludwig, VU and Parodi, F and Ahmed, N and Brannon, EM and Ramakrishnan, A and Platt, ML},
   journal = {Proc.  R.  Soc. B},
   number  = {B291},
   title   = {Attention deficits linked with proclivity to explore while foraging},
   volume  = {291},
-  doi = {doi.org/10.1098/rspb.2022.2584},
+  doi     = {doi.org/10.1098/rspb.2022.2584},
   year    = {2024}
 }
