--- a/gk.bib
+++ b/gk.bib
@@ -30247,3 +30247,12 @@
   doi     = {doi.org/10.1098/rspb.2022.2584},
   year    = {2024}
 }
+@article{bozhilova2018mind,
+  title={Mind wandering perspective on attention-deficit/hyperactivity disorder},
+  author={Bozhilova, Natali S and Michelini, Giorgia and Kuntsi, Jonna and Asherson, Philip},
+  journal={Neuroscience \& Biobehavioral Reviews},
+  volume={92},
+  pages={464--476},
+  year={2018},
+  publisher={Elsevier}
+}
