--- a/gk.bib
+++ b/gk.bib
@@ -30241,18 +30241,28 @@
 @article{BarLudPar2024,
   author  = {Barack, DL and Ludwig, VU and Parodi, F and Ahmed, N and Brannon, EM and Ramakrishnan, A and Platt, ML},
   journal = {Proc.  R.  Soc. B},
-  number  = {B291},
+  number  = {291},
   title   = {Attention deficits linked with proclivity to explore while foraging},
   volume  = {291},
   doi     = {doi.org/10.1098/rspb.2022.2584},
   year    = {2024}
 }
 @article{bozhilova2018mind,
-  title={Mind wandering perspective on attention-deficit/hyperactivity disorder},
-  author={Bozhilova, Natali S and Michelini, Giorgia and Kuntsi, Jonna and Asherson, Philip},
-  journal={Neuroscience \& Biobehavioral Reviews},
-  volume={92},
-  pages={464--476},
-  year={2018},
-  publisher={Elsevier}
+  title     = {Mind wandering perspective on attention-deficit/hyperactivity disorder},
+  author    = {Bozhilova, Natali S and Michelini, Giorgia and Kuntsi, Jonna and Asherson, Philip},
+  journal   = {Neuroscience \& Biobehavioral Reviews},
+  volume    = {92},
+  pages     = {464--476},
+  year      = {2018},
+  publisher = {Elsevier}
+}
+@article{westwood2022current,
+  title={Current research overstates American support for political violence},
+  author={Westwood, Sean J and Grimmer, Justin and Tyler, Matthew and Nall, Clayton},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={119},
+  number={12},
+  pages={e2116870119},
+  year={2022},
+  publisher={National Acad Sciences}
 }
