--- a/gk.bib
+++ b/gk.bib
@@ -30266,3 +30266,22 @@
   year={2022},
   publisher={National Acad Sciences}
 }
+@article{arnicane2021validity,
+  title={Validity of attention self-reports in younger and older adults},
+  author={Arnicane, Andra and Oberauer, Klaus and Souza, Alessandra S},
+  journal={Cognition},
+  volume={206},
+  pages={104482},
+  year={2021},
+  publisher={Elsevier}
+}
+@article{jordao2019meta,
+  title={Meta-analysis of aging effects in mind wandering: Methodological and sociodemographic factors.},
+  author={Jord{\~a}o, Magda and Ferreira-Santos, Fernando and Pinho, Maria Salom{\'e} and St Jacques, Peggy L},
+  journal={Psychology and aging},
+  volume={34},
+  number={4},
+  pages={531},
+  year={2019},
+  publisher={American Psychological Association}
+}
