--- a/gk.bib
+++ b/gk.bib
@@ -30285,3 +30285,15 @@
   year={2019},
   publisher={American Psychological Association}
 }
+@article{freeder2019importance,
+  title =        {The importance of knowing `what goes with what':
+                  Reinterpreting the evidence on policy attitude
+                  stability},
+  author =       {Freeder, Sean and Lenz, Gabriel S and Turney, Shad},
+  journal =      {The Journal of Politics},
+  volume =       {81},
+  number =       {1},
+  pages =        {274--290},
+  year =         {2019},
+  publisher =    {University of Chicago Press Chicago, IL}
+}
