--- a/gk.bib
+++ b/gk.bib
@@ -30297,3 +30297,13 @@
   year =         {2019},
   publisher =    {University of Chicago Press Chicago, IL}
 }
+@article{girardeau2022my,
+  title={Where is my mind…? The link between mind wandering and prospective memory},
+  author={Girardeau, Jean-Charles and Sperduti, Marco and Blond{\'e}, Philippe and Piolino, Pascale},
+  journal={Brain sciences},
+  volume={12},
+  number={9},
+  pages={1139},
+  year={2022},
+  publisher={MDPI}
+}
