--- a/gk.bib
+++ b/gk.bib
@@ -30307,3 +30307,9 @@
   year={2022},
   publisher={MDPI}
 }
+@book{rolls2010noisy,
+  title={The noisy brain: stochastic dynamics as a principle of brain function},
+  author={Rolls, Edmund T and Deco, Gustavo},
+  year={2010},
+  publisher={Oxford university press}
+}
